@@ -48,7 +48,7 @@ COM_CONTACT_FIELD_CONFIG_CATEGORIES_DESC="These settings apply for Contact categ
 COM_CONTACT_FIELD_CONFIG_CATEGORIES_LABEL="Categories Options"
 COM_CONTACT_FIELD_CONFIG_COUNTRY_DESC="Show/Hide a Country column in the list of Contacts."
 COM_CONTACT_FIELD_CONFIG_COUNTRY_LABEL="Country"
-COM_CONTACT_FIELD_CONFIG_CUSTOM_REPLY_DESC="Custom Reply Desc"
+COM_CONTACT_FIELD_CONFIG_CUSTOM_REPLY_DESC="Turns off the automated reply, allowing for Plugins to handle integration with other systems."
 COM_CONTACT_FIELD_CONFIG_CUSTOM_REPLY_LABEL="Custom Reply"
 COM_CONTACT_FIELD_CONFIG_EMAIL_DESC="Show/Hide an Email column in the list of Contacts."
 COM_CONTACT_FIELD_CONFIG_EMAIL_LABEL="Email"
@@ -62,9 +62,9 @@ COM_CONTACT_FIELD_CONFIG_PHONE_DESC="Show/Hide a Phone column in the list of Con
 COM_CONTACT_FIELD_CONFIG_PHONE_LABEL="Phone"
 COM_CONTACT_FIELD_CONFIG_POSITION_DESC="Show/Hide a Position column in the list of Contacts."
 COM_CONTACT_FIELD_CONFIG_POSITION_LABEL="Position"
-COM_CONTACT_FIELD_CONFIG_REDIRECT_DESC="Contact Redirect desc"
+COM_CONTACT_FIELD_CONFIG_REDIRECT_DESC="Enter an alternative email address, where information will be sent to."
 COM_CONTACT_FIELD_CONFIG_REDIRECT_LABEL="Contact Redirect"
-COM_CONTACT_FIELD_CONFIG_SESSION_CHECK_DESC="Session Check DESC"
+COM_CONTACT_FIELD_CONFIG_SESSION_CHECK_DESC="Check for the existence of session cookie.This means that users without cookies enabled will not be able to send emails."
 COM_CONTACT_FIELD_CONFIG_SESSION_CHECK_LABEL="Session Check"
 COM_CONTACT_FIELD_CONFIG_STATE_DESC="Show/Hide a State column in the list of Contacts."
 COM_CONTACT_FIELD_CONFIG_SUBURB_DESC="Show/Hide a City or Suburb column in the list of Contacts."
@@ -85,8 +85,6 @@ COM_CONTACT_FIELD_EMAIL_BANNED_TEXT_DESC="Text not allowed in contact form body"
 COM_CONTACT_FIELD_EMAIL_BANNED_TEXT_LABEL="Banned Text"
 COM_CONTACT_FIELD_EMAIL_EMAIL_COPY_DESC="Hide or Show checkbox to allow copy of email to be sent to submitter."
 COM_CONTACT_FIELD_EMAIL_EMAIL_COPY_LABEL="Send Copy to Submitter"
-COM_CONTACT_FIELD_EMAIL_REDIRECT_DESC="Contact Redirect description"
-COM_CONTACT_FIELD_EMAIL_REDIRECT_LABEL="Contact Redirect"
 COM_CONTACT_FIELD_EMAIL_SHOW_FORM_DESC="Show or Hide contact form."
 COM_CONTACT_FIELD_EMAIL_SHOW_FORM_LABEL="Show Contact Form"
 COM_CONTACT_FIELD_FEATURED_DESC="If marked yes, will be displayed in featured view."
